apps/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: jenkins.bar
    http:
      paths:
      - path: /jenkins
        pathType: "Prefix"
        backend:
          service:
            name: jenkins-service
            port:
              number: 80
